--- a/client/default/index.html
+++ b/client/default/index.html
@@ -73,6 +73,7 @@
  
   </div>
 
+  <script type="text/javascript" src="lib/jquery-1.3.2.min.js"></script>
   <script type="text/javascript" src="config.js"></script>
   <script type="text/javascript" src="js/init.js"></script>
   <script type="text/javascript" src="js/util.js"></script>
